# hft-abm-smc-abc

./: README.md  opensqlhistory.py  pyproject.toml
hft_abm_smc_abc/: ARMACalibrationExample.py  OpenSavedHistory.ipynb  PreisModel.m  PreisOrderBook.m  ReproducePreis.py  SMC_ABC.py  SMC_ABC_init.py  config.py  preisOrderBookSeed.py  preisSeed.py  reproduceIntradayPricePath.m  resultsReal_Data_Small_Test - Smaller Test - eps1_negfix_pop6_pop301597579353.943031.db  resultsRobustAdaptive2Norm_TH100_t6__nonunifacc_eps00011590750093.3600469.db  resultsTH100_t=6_RobustAcceptor_eps0001_seed11590915692.3535562.db  resultsTH100_t=6_stochasticAcceptor_eps0001_seed21590917044.8407867.db  resultsjitAdaptivePNormDistance_2300_t=1_nonunifacc_eps091590597285.7446713.db  stylised_facts.py  test1_test_1578239020.7823887.db  test_parrallel.sh
results archive/: resultsACF_Fixthreads2_100_TH100_t=8_uniformAcceptor_eps0001_seed41594889913.7575943.db  resultsFixthreads2_100_TH100_t=10_uniformAcceptor_eps0001_seed41594892373.077974.db  resultsFixthreads2_100_TH100_t=8_uniformAcceptor_eps0001_seed41594889004.2171655.db  resultsReal_Data_Small_Test - Smaller Test - eps1_negfix_pop51597572468.102476.db  resultsReal_Data_Small_Test - Smaller Test - eps1_negfix_pop6_pop301597579353.943031.db  resultsTH100_t=6_uniformAcceptor_eps0001_seed41594827575.9326682.db  resultsTH100_t=6_uniformAcceptor_eps0001_seed41594836095.5789957.db  resultsTH100_t=8_uniformAcceptor_eps0001_seed41594886569.3572297.db
tests/: new_test_case.csv  original_test_case.csv  profiling_results.kgrind  test.py  (+1 more)
(+6 files in other folders)
